[gd_scene load_steps=3 format=2]

[ext_resource path="res://character_editor/character_editor.gd" type="Script" id=1]
[ext_resource path="res://icon_white.png" type="Texture" id=2]

[node name="CharacterEditor" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterListContainer" type="VBoxContainer" parent="."]
margin_right = 200.0
margin_bottom = 800.0
rect_min_size = Vector2( 200, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterListContainer"]
margin_right = 200.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="CharacterListContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 48.0
margin_bottom = 17.0
text = "Sort by:"

[node name="SortOption" type="OptionButton" parent="CharacterListContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 200.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="CharacterList" type="ItemList" parent="CharacterListContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 800.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 212.0
margin_right = 1024.0
margin_bottom = 800.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 812.0
margin_bottom = 104.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 608.0
margin_bottom = 104.0
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 63.0
margin_bottom = 19.0
text = "Identifier"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 67.0
margin_right = 608.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 63.0
margin_bottom = 47.0
text = "Full name"

[node name="FullNameEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 67.0
margin_top = 28.0
margin_right = 608.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 59.0
margin_right = 63.0
margin_bottom = 73.0
text = "Gender"

[node name="GenderSelector" type="OptionButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 67.0
margin_top = 56.0
margin_right = 608.0
margin_bottom = 76.0

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 85.0
margin_right = 63.0
margin_bottom = 99.0
text = "Actor"

[node name="LineEdit3" type="LineEdit" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 67.0
margin_top = 80.0
margin_right = 608.0
margin_bottom = 104.0
editable = false

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 612.0
margin_right = 812.0
margin_bottom = 104.0
rect_min_size = Vector2( 200, 0 )

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 812.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 8 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 812.0
margin_bottom = 134.0
text = "Description"

[node name="DescriptionEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 812.0
margin_bottom = 782.0
size_flags_vertical = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="OccurenceMap" type="GridContainer" parent="VBoxContainer"]
margin_top = 786.0
margin_right = 812.0
margin_bottom = 800.0
columns = 4

[node name="Label" type="Label" parent="VBoxContainer/OccurenceMap"]
margin_right = 24.0
margin_bottom = 14.0
text = "ep1"

[node name="Label2" type="Label" parent="VBoxContainer/OccurenceMap"]
margin_left = 28.0
margin_right = 86.0
margin_bottom = 14.0
text = "36 words"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/OccurenceMap"]
margin_left = 90.0
margin_right = 451.0
margin_bottom = 14.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
[connection signal="item_selected" from="CharacterListContainer/CharacterList" to="." method="_on_CharacterList_item_selected"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/GridContainer/FullNameEdit" to="." method="_on_FullNameEdit_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/GridContainer/GenderSelector" to="." method="_on_GenderSelector_item_selected"]
[connection signal="text_changed" from="VBoxContainer/DescriptionEdit" to="." method="_on_DescriptionEdit_text_changed"]
